# rust-academy-manager

./: .gitattributes  Cargo.toml  readme.md
locales/: en.yml  es.yml
scripts/: main.py  patterns.py  validate.py
scripts/archived/: export_translations.py  replace_keys.py
scripts/patterns/: __init__.py  macro_menu_option_pattern.py
scripts/validate/: __main__.py  helpers.py  key_finder.py  menu_option_pattern.py  patterns.py  translations.py  types.py
src/: asignatura.rs  components.rs  config.rs  consola.rs  errors.rs  helpers.rs  main.rs  menu_asignaturas.rs  menu_principal.rs  menu_profes.rs  persistencia.rs  repo.rs  repository.rs  serializable.rs  serialization.rs  shared_menus.rs  teachers.rs  textos.rs  texts.rs  ui.rs  views.rs  vista.rs
src/application/: add_subject.rs  add_teacher.rs  application.rs  create_application.rs  get_subject_index_by_name.rs  mod.rs  remove_subject.rs  remove_teacher.rs  subjects_app.rs  teachers_app.rs
src/domain/: mod.rs  subject.rs  subjects.rs  teacher.rs  teachers.rs
src/dominio/: asignatura.rs  mod.rs  teachers.rs
src/menus/: assign_teacher_menu.rs  counter.rs  create_menu_options.rs  main_menu.rs  menu_anadir_asignatura.rs  menu_anadir_profe.rs  menu_anadir_profesor.rs  menu_asignar_profesor.rs  menu_asignaturas.rs  menu_eliminar_asignatura.rs  menu_eliminar_profesor.rs  menu_principal.rs  menu_profes.rs  menu_profesores.rs  mod.rs  shared.rs
src/repository/: add_teacher.rs  application.rs  mod.rs  model.rs  modelo.rs  persistence.rs  persistence_trait.rs  persistencia.rs  remove_teacher.rs  repository.rs  (+2 more)
(+61 files in other folders)
