[package]
name = "rust-academy-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
clearscreen = "1.0.7"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
