[package]
name = "rust-academy-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
clearscreen = "1.0.7"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
lazy_static = "1.4.0"
rust-i18n = "0"
clap = {version = "3.1.9", features = ["cargo"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
colored = "2.0.0"
